@@ -4401,4 +4401,14 @@
     X
     X\n 
 
+/xyz/C
+  xyz 
+  abcxyz 
+  abcxyz\Y
+  ** Failers 
+  abc
+  abc\Y
+  abcxypqr  
+  abcxypqr\Y  
+
 / End of testinput7 /
