@@ -54,6 +54,8 @@ Version 7.9 xx-xxx-09
 12. Added the -M command line option to pcretest. 
 
 14. Added the non-standard REG_NOTEMPTY option to the POSIX interface.
+
+15. Added the PCRE_NO_START_OPTIMIZE match-time option.
       
 
 Version 7.8 05-Sep-08
